package it.fleetpulse.api.alert;

public enum AlertSeverity {
    LOW,
    MEDIUM,
    HIGH,
    CRITICAL
}
