package it.fleetpulse.api.alert;

public enum AlertType {
    ENGINE_TEMPERATURE_HIGH,
    BATTERY_VOLTAGE_LOW,
    SERVICE_DUE
}
