@startuml
hide methods
skinparam classAttributeIconSize 0
class Vehicle
class TelemetrySample
class VehicleState
class MaintenanceAlert
enum AlertType {
  ENGINE_TEMPERATURE_HIGH
  BATTERY_VOLTAGE_LOW
  SERVICE_DUE
}
enum AlertSeverity {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}
Vehicle "1" -- "0..*" TelemetrySample
Vehicle "1" -- "0..1" VehicleState
Vehicle "1" -- "0..*" MaintenanceAlert
MaintenanceAlert --> AlertType
MaintenanceAlert --> AlertSeverity
@enduml
